deploy/dev/hub/webhook/200-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acm-webhook
  name: acm-webhook
  namespace: open-cluster-management
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8000
  selector:
    app: acm-webhook
  type: ClusterIP
