deploy/dev/hub/webhook/100-validating-webhook-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: acm-webhook
  name: acm-validating-webhook
webhooks:
  - name: acm.validating.webhook.admission.open-cluster-management.io
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lRT3ppUzV1WnlnekQyTjVvZjg5a3RLREFOQmdrcWhraUc5dzBCQVFzRkFEQXkKTVRBd0xnWURWUVFERXlkaFkyMHRkMlZpYUc5dmF5NXZjR1Z1TFdOc2RYTjBaWEl0YldGdVlXZGxiV1Z1ZEM1egpkbU13SGhjTk1qQXdOakl6TURrME16UTRXaGNOTWpFd05qSXpNRGswTXpRNFdqQXlNVEF3TGdZRFZRUURFeWRoClkyMHRkMlZpYUc5dmF5NXZjR1Z1TFdOc2RYTjBaWEl0YldGdVlXZGxiV1Z1ZEM1emRtTXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFZsYnhQUE1FNXNkUUpCa3p2eGdraWlqM0kyZzRNUEMyMQpXZVpGKytIcldZ [...]
      service:
        name: acm-webhook
        namespace: open-cluster-management
        port: 443
        path: /validating
    sideEffects: None
    timeoutSeconds: 5
    rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      operations:
        - DELETE
      resources:
        - namespaces
      scope: '*'
