deploy/dev/hub/webhook/100-webhook-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: acm-webhook
  name: acm-mutating-webhook
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lRT3ppUzV1WnlnekQyTjVvZjg5a3RLREFOQmdrcWhraUc5dzBCQVFzRkFEQXkKTVRBd0xnWURWUVFERXlkaFkyMHRkMlZpYUc5dmF5NXZjR1Z1TFdOc2RYTjBaWEl0YldGdVlXZGxiV1Z1ZEM1egpkbU13SGhjTk1qQXdOakl6TURrME16UTRXaGNOTWpFd05qSXpNRGswTXpRNFdqQXlNVEF3TGdZRFZRUURFeWRoClkyMHRkMlZpYUc5dmF5NXZjR1Z1TFdOc2RYTjBaWEl0YldGdVlXZGxiV1Z1ZEM1emRtTXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFZsYnhQUE1FNXNkUUpCa3p2eGdraWlqM0kyZzRNUEMyMQpXZVpGKytIcldZ [...]
      service:
        name: acm-webhook
        namespace: open-cluster-management
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    name: mcm.webhook.admission.cloud.ibm.com
    rules:
      - apiGroups:
          - apps.open-cluster-management.io
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - deployables
          - channels
          - subscriptions
          - placementrules
        scope: '*'
      - apiGroups:
          - app.k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - applications
        scope: '*'
    sideEffects: None
